[package]
name = "readability-wasm"
version = "0.3.0"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/kumabook/readability"
repository = "https://github.com/kumabook/readability.git"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []

[dependencies]
regex = "1.9"
url = "2.4"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
lazy_static = "1.4"

[dependencies.reqwest-wasm]
version = "0.11.16"
features = ["blocking"]
default-features = false
