[package]
name = "readability-async"
version = "0.3.0"
edition = "2021"
authors = ["Hiroki Kumamoto <kumabook@live.jp>"]
license = "MIT"
homepage = "https://github.com/kumabook/readability"
repository = "https://github.com/kumabook/readability.git"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []

[dependencies]
regex-lite = "0.1.5"
url = "2.4"
html5ever = "0.27.0"
markup5ever_rcdom = "0.3.0"
lazy_static = "1.4"
